--- a/course_js.html
+++ b/course_js.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Javascript | Polymer" />
+    <meta property="og:description" content="Getting Started with JavaScript" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://wendy03.github.io/escape-seo/course_js.html"
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/Wendy03/escape-seo/blob/main/assets/images/og.png"
+    />
     <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
