--- a/course_js.html
+++ b/course_js.html
@@ -11,7 +11,7 @@
       property="og:url"
       content="https://wendy03.github.io/escape-seo/course_js.html"
     />
-    <meta property="og:image" content="./assets/images/og.png" />
+    <meta property="og:image" content="https://github.com/Wendy03/escape-seo/blob/main/assets/images/og.png" />
     <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
