--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://wendy03.github.io/escape-seo/" />
-    <meta property="og:image" content="./assets/images/og.png" />
+    <meta property="og:image" content=".https://github.com/Wendy03/escape-seo/blob/main/assets/images/og.png" />
     <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
