--- a/signin.html
+++ b/signin.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://wendy03.github.io/escape-seo/signin.html" />
   <meta
     property="og:image"
-    content="./assets/images/og.png"
+    content="https://github.com/Wendy03/escape-seo/blob/main/assets/images/og.png"
   />
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
