--- a/courses.html
+++ b/courses.html
@@ -14,7 +14,7 @@
   />
   <meta
     property="og:image"
-    content="https://github.com/Wendy03/escape-seo/blob/main/assets/images/og.png"
+    content="https://imgur.com/a/xo5Q3sR"
   />
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
