--- a/course_js.html
+++ b/course_js.html
@@ -11,7 +11,12 @@
       property="og:url"
       content="https://wendy03.github.io/escape-seo/course_js.html"
     />
-    <meta property="og:image" content="https://imgur.com/a/xo5Q3sR" />
+    <meta
+      property="og:image"
+      content="https://github.com/Wendy03/escape-seo/blob/main/assets/images/og.png"
+    />
+    <meta property="og:image:width" content="612" />
+    <meta property="og:image:height" content="689" />
     <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
