--- a/signin.html
+++ b/signin.html
@@ -11,8 +11,10 @@
   <meta property="og:url" content="https://wendy03.github.io/escape-seo/signin.html" />
   <meta
     property="og:image"
-    content="https://imgur.com/a/xo5Q3sR"
+    content="https://github.com/Wendy03/escape-seo/blob/main/assets/images/og.png"
   />
+  <meta property="og:image:width" content="612"/>
+  <meta property="og:image:height" content="689"/>
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
