--- a/course_js.html
+++ b/course_js.html
@@ -13,7 +13,7 @@
     />
     <meta
       property="og:image"
-      content="https://wendy03.github.io/escape-seo/assets/images/og.png"
+      content="https://wendy03.github.io/escape-seo/assets/images/og.jpg"
     />
     <meta property="og:image:width" content="612" />
     <meta property="og:image:height" content="689" />
