--- a/courses.html
+++ b/courses.html
@@ -13,7 +13,7 @@
     />
     <meta
       property="og:image"
-      content="https://wendy03.github.io/escape-seo/assets/images/og.png"
+      content="https://wendy03.github.io/escape-seo/assets/images/og.jpg"
     />
     <meta property="og:image:width" content="612" />
     <meta property="og:image:height" content="689" />
@@ -267,7 +267,7 @@
             <div class="col-12 col-md-6 col-lg-4">
               <div class="card mb-3">
                 <img
-                  src="./assets/images/js.png"
+                  src="./assets/images/js.jpg"
                   class="card-img-top"
                   style="height: 150px; object-fit: cover"
                 />
@@ -359,7 +359,7 @@
             <div class="col-12 col-md-6 col-lg-4">
               <div class="card mb-3">
                 <img
-                  src="./assets/images/node.jpeg"
+                  src="./assets/images/node.jpg"
                   class="card-img-top"
                   style="height: 150px; object-fit: cover"
                 />
@@ -405,7 +405,7 @@
             <div class="col-12 col-md-6 col-lg-4">
               <div class="card mb-3">
                 <img
-                  src="./assets/images/bootstrap5.png"
+                  src="./assets/images/bootstrap5.jpg"
                   class="card-img-top"
                   style="height: 150px; object-fit: cover"
                 />
@@ -451,7 +451,7 @@
             <div class="col-12 col-md-6 col-lg-4">
               <div class="card mb-3">
                 <img
-                  src="./assets/images/figma.png"
+                  src="./assets/images/figma.jpg"
                   class="card-img-top"
                   style="height: 150px; object-fit: cover"
                 />
@@ -497,7 +497,7 @@
             <div class="col-12 col-md-6 col-lg-4">
               <div class="card mb-3">
                 <img
-                  src="./assets/images/vue.png"
+                  src="./assets/images/vue.jpg"
                   class="card-img-top"
                   style="height: 150px; object-fit: cover"
                 />
