--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://wendy03.github.io/escape-seo/" />
-    <meta property="og:image" content="https://wendy03.github.io/escape-seo/assets/images/og.png" />
+    <meta property="og:image" content="https://wendy03.github.io/escape-seo/assets/images/og.jpg" />
     <meta property="og:image:width" content="612"/>
     <meta property="og:image:height" content="689"/>
     <!-- Bootstrap Icons -->
