--- a/signin.html
+++ b/signin.html
@@ -11,7 +11,7 @@
   <meta property="og:url" content="https://wendy03.github.io/escape-seo/signin.html" />
   <meta
     property="og:image"
-    content="https://wendy03.github.io/escape-seo/assets/images/og.png"
+    content="https://wendy03.github.io/escape-seo/assets/images/og.jpg"
   />
   <meta property="og:image:width" content="612"/>
   <meta property="og:image:height" content="689"/>
